@@ -466,9 +466,8 @@ CPU, Ethernet, SATA, USB, and other functionality in one chip. There
 are many Network Attached Storage (NAS) devices on the market that are
 based on an Orion chip. &debian; currently supports the following
 Orion based devices: <ulink url="&url-arm-cyrius-kuroboxpro;">Buffalo
-Kurobox</ulink>, <ulink url="&url-arm-cyrius-mv2120;">HP
-mv2120</ulink> and <ulink url="&url-arm-cyrius-qnap;">QNAP TS-109,
-TS-209, TS-409 and TS-409U and variants</ulink>.
+Kurobox</ulink> and <ulink url="&url-arm-cyrius-mv2120;">HP
+mv2120</ulink>.
 
 </para></listitem>
 </varlistentry>
