@@ -31,10 +31,8 @@ obtained from &mv2120-firmware-img;.
 
 The installation files for the QNAP Turbo Station consist of a kernel and
 ramdisk as well as a script to write these images to flash.  You can obtain
-the installation files for QNAP TS-109, TS-209, TS-409 and TS-409U models
-from &qnap-orion-firmware-img;.  The installation files for QNAP
-TS-11x/TS-12x, HS-210, TS-21x/TS-22x and TS-41x/TS-41x models can be found
-at &qnap-kirkwood-firmware-img;.
+the installation files for QNAP TS-11x/TS-12x, HS-210, TS-21x/TS-22x and
+TS-41x/TS-41x models from &qnap-kirkwood-firmware-img;.
 
 </para>
    </sect3>
