@@ -14,6 +14,9 @@ installation-guide (2017XXXX) UNRELEASED; urgency=medium
   * Document the installation of sudo, if no root password is given.
     Closes: #692314
 
+  [ Martin Michlmayr ]
+  * Remove QNAP TS-109, TS-209 and TS-409 as they are no longer supported.
+
  -- Samuel Thibault <sthibault@debian.org>  Tue, 20 Jun 2017 01:17:02 +0200
 
 installation-guide (20170614) unstable; urgency=medium
